--- a/render.yaml
+++ b/render.yaml
@@ -5,11 +5,25 @@ services:
   - type: web
     name: universal-rag-system
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: bash start.sh
+    region: oregon  # Choose a region close to your users
+    plan: free  # Explicitly set to free tier
+    buildCommand: |
+      pip install --no-cache-dir -r requirements.txt
+    startCommand: |
+      # Set Python memory management variables
+      export PYTHONUNBUFFERED=1
+      export PYTHONDONTWRITEBYTECODE=1
+      # Limit worker memory usage
+      export PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:128
+      # Start the server with a single worker to save memory
+      uvicorn main:app --host 0.0.0.0 --port $PORT --workers 1 --limit-max-requests 1000
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
+      - key: PYTHONUNBUFFERED
+        value: 1
+      - key: PYTHONDONTWRITEBYTECODE
+        value: 1
       - key: PINECONE_API_KEY
         fromService:
           name: pinecone
