--- a/requirements-optimized.txt
+++ b/requirements-optimized.txt
@@ -13,9 +13,9 @@ langchain-community==0.3.0
 pinecone-client==5.0.1
 
 # Optimized PyTorch and Transformers
-torch==2.2.2 --index-url https://download.pytorch.org/whl/cpu
-transformers==4.39.3
-sentence-transformers==2.6.1
+torch==2.0.1
+transformers==4.30.2
+sentence-transformers==2.2.2
 
 # Required dependencies for the above
 numpy==1.26.4
