--- a/requirements-optimized.txt
+++ b/requirements-optimized.txt
@@ -13,8 +13,8 @@ pinecone-client==5.0.1
 
 # Optimized PyTorch and Transformers - CPU only
 torch==2.2.2 --index-url https://download.pytorch.org/whl/cpu
-transformers==4.39.3 --no-deps
-sentence-transformers==2.6.1 --no-deps
+transformers==4.39.3
+sentence-transformers==2.6.1
 
 # Core dependencies
 numpy==1.26.4  # Required by PyTorch and Transformers
