--- a/requirements-optimized.txt
+++ b/requirements-optimized.txt
@@ -11,6 +11,9 @@ langchain-community==0.3.0
 # Pinecone client - minimal
 pinecone-client==5.0.1
 
+# Google GenAI integration
+langchain-google-genai==0.0.8
+
 # Optimized PyTorch and Transformers - CPU only
 torch==2.2.2 --index-url https://download.pytorch.org/whl/cpu
 transformers==4.39.3
