--- a/requirements-optimized.txt
+++ b/requirements-optimized.txt
@@ -4,9 +4,9 @@ uvicorn[standard]==0.24.0
 gunicorn==21.2.0
 python-dotenv==1.0.0
 
-# LangChain - minimal required
-langchain-core==0.3.0
-langchain-community==0.3.0
+# LangChain - versions compatible with google-genai
+langchain-core==0.1.52
+langchain-community==0.0.28
 
 # Pinecone client - minimal
 pinecone-client==5.0.1
