--- a/requirements-optimized.txt
+++ b/requirements-optimized.txt
@@ -3,7 +3,8 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-dotenv==1.0.0
 
-# LangChain core (minimal)
+# LangChain
+langchain==0.1.0
 langchain-core==0.1.52
 langchain-community==0.0.28
 
