--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,9 @@ services:
     env: python
     plan: free
     region: oregon
-    buildCommand: pip install -r requirements-optimized.txt
+    buildCommand: |
+      python -m pip install --upgrade pip
+      pip install -r requirements-optimized.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
