--- a/requirements-optimized.txt
+++ b/requirements-optimized.txt
@@ -26,8 +26,8 @@ pydantic==2.7.4
 pypdf==3.17.4
 
 # Required by sentence-transformers
-transformers==4.36.2
-tokenizers==0.15.1
+transformers>=4.36.2
+tokenizers>=0.19.1
 
 # Optimized PyTorch (CPU only, minimal)
 torch==2.1.2 --index-url https://download.pytorch.org/whl/cpu
